Week11/flask-production-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-api
  labels:
    app: flask-production-api
